--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,14 @@
 <div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_chat" %>
-</div> 
+  <div class="side-bar">
+    <%= render "side_bar" %>
+    <div class="said-header">
+    <div class="groups"></div>
+    </div>
+  </div>
+  <div class="chat">
+    <%= render "main_chat" %>
+      <div class="main-header"></div>
+      <div class="messagea"></div>
+      <div class="form"></div>
+  </div>
+</div>
